--- a/book/index.qmd
+++ b/book/index.qmd
@@ -6,11 +6,12 @@ This is an open book created by the students and instructors in "The Psychology 
 
 - [1.  Preface from the instructors: Teaching the Psychology of the Climate Crisis.](chapters/psychology-climate-change.md)
 - [2.  Correlates of collective behavioral engagement](chapters/behavior_change.md)
-- [3.  Identifying with the climate crisis: Understanding the influences of social identities on climate change belief and attitudes](chapters/social_identity.md)
-- [4.  The psychology of time, climate change, and human behavior](chapters/time.md)
-- [5.  Factors in Climate Change Belief Formation](chapters/motivated_reasoning_misinformation.md)
-- [6.  Game Theory of Climate Change](chapters/game_theory.md)
-- [7.  Climate Change Interventions: Behaviors, Attitudes, and Beliefs](chapters/interventions.md)
+- [3.  Cooperation.](chapters/cooperation.md)
+- [4.  Identifying with the climate crisis: Understanding the influences of social identities on climate change belief and atttudes](chapters/social_identity.md)
+- [5.  The psychology of time, climate change, and human behavior](chapters/time.md)
+- [6.  Factors in Climate Change Belief Formation](chapters/motivated_reasoning_misinformation.md)
+- [7.  Game Theory of Climate Change](chapters/game_theory.md)
+- [8.  Climate Change Interventions: Behaviors, Attitudes, and Beliefs](chapters/interventions.md)
 
 
 This book was generated using [Quarto](https://quarto.org).
